<resources>
    <string name="app_name">ProjetAppMobile</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_activity_regles">ActivityRegle</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="facile">Facile</string>
    <string name="difficile">Difficile</string>
    <string name="expert">Expert</string>
    <string name="tableau_des_scores">Tableau des scores</string>
    <string name="regle">Règle</string>
    <string name="nom_jeux">COLOR MEMORY</string>
    <string name="begin_button">Démarrer</string>
    <string name="nom">Nom</string>
    <string name="login">Login</string>
    <string name="inscription">Inscription</string>
    <string name="name">Name</string>
    <string name="date_de_naissance">Date de naissance</string>
    <string name="sexe">Sexe</string>
    <string name="masculin">Masculin</string>
    <string name="feminin">Féminin</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="adresse_mail">Adresse Mail</string>
    <string name="email">Email</string>
    <string name="se_connecter">Se connecter</string>
    <string name="connection">Connection</string>
    <string name="btninscrire">S\'inscrire</string>
    <string name="return_connect">Retour à la connection</string>
    <string name="jouer_sans_se_connecter">Jouer sans se connecter</string>
    <string name="gagner">Tu as gagné ! Clique sur démarrer pour rejouer.</string>
    <string name="perdre">Tu as perdu. Clique sur démarrer pour rejouer.</string>
    <string name="raté">Raté !</string>
    <string name="allumage">"Retiens bien l'ordre d'allumage !"</string>
    <string name="jouer">"A toi de jouer !"</string>
    <string name="bienjoué">"Bien joué ! Continues"</string>
    <string name="demarrer">"Clique sur Démarrer pour lancer !"</string>
    <string name="coeur">coeur</string>
    <string name="titre_regles">Règles du Color Memory</string>
    <string name="regle1">Les quatres boutons devant toi vont s&#8217;allumer chacun leur tour dans un ordre précis, il te suffira de cliquer sur les boutons en suivant cette ordre pour gagner la partie</string>
    <string name="regle2">Attention, ce n&#8217;est pas si simple, le nombre de boutons allumés augmente progressivement et cela devient vite compliqué !</string>
    <string name="regle3">Pour finir, les modes les plus compliqués rapportent plus de points, donc choisis bien ton mode pour privilégié soit la facilité soit les points de score.</string>
    <string name="s_inscrire">S\'inscrire</string>
    <string name="se_connecter">Se connecter</string>
    <string name="retourner_au_jeu">Retourner au jeu</string>
    <string name="todo">TODO</string>
</resources>